--- a/dotnet/820/Dockerfile
+++ b/dotnet/820/Dockerfile
@@ -11,12 +11,12 @@ RUN         apt update -y \
             && D_V="$(curl -sSL https://dotnet.microsoft.com/en-us/download/dotnet/9.0 | grep -i  '<h3 id="sdk-9.*">SDK 9.*.*</h3>'  | head -1 | awk -F\" '{print $3}' | awk '{print $2;}' | sed 's/<\/h3>//g')" \ 
             && chmod +x dotnet-install.sh \
 			&& ./dotnet-install.sh -i /usr/share -v $D_V \
-            && ln -s /usr/share/dotnet /usr/bin/dotnet
-            && apt-get install -y curl
-            && curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
-            && apt-get install -y nodejs
+            && ln -s /usr/share/dotnet /usr/bin/dotnet \
+            && apt-get install -y curl \
+            && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+            && apt-get install -y nodejs \
             && npm install -g npm@latest
-
+            
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
