--- a/dotnet/820/Dockerfile
+++ b/dotnet/820/Dockerfile
@@ -1,6 +1,6 @@
 FROM        --platform=$TARGETOS/$TARGETARCH ghcr.io/parkervcp/yolks:debian
 
-LABEL       author="Torsten Widmann" maintainer="info@goover.de"
+LABEL       author="Mohamed Yassine Ben Miled" maintainer="Mohamed Yassine Ben Miled"
 
 ENV         DEBIAN_FRONTEND=noninteractive
 
@@ -8,7 +8,7 @@ RUN         apt update -y \
             && apt upgrade -y \
             && apt install -y apt-transport-https wget curl iproute2 libgdiplus tini \
             && wget https://dot.net/v1/dotnet-install.sh \
-            && D_V="$(curl -sSL https://dotnet.microsoft.com/en-us/download/dotnet/9.0 | grep -i  '<h3 id="sdk-9.*">SDK 9.*.*</h3>'  | head -1 | awk -F\" '{print $3}' | awk '{print $2;}' | sed 's/<\/h3>//g')" \ 
+            && D_V="$(curl -sSL https://dotnet.microsoft.com/en-us/download/dotnet/8.0 | grep -i  '<h3 id="sdk-8.*">SDK 8.*.*</h3>'  | head -1 | awk -F\" '{print $3}' | awk '{print $2;}' | sed 's/<\/h3>//g')" \ 
             && chmod +x dotnet-install.sh \
 			&& ./dotnet-install.sh -i /usr/share -v $D_V \
             && ln -s /usr/share/dotnet /usr/bin/dotnet \
@@ -16,7 +16,7 @@ RUN         apt update -y \
             && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
             && apt-get install -y nodejs \
             && npm install -g npm@latest
-            
+
 USER        container
 ENV         USER=container HOME=/home/container
 WORKDIR     /home/container
